<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.livefyre</groupId>
    <artifactId>StreamHub-Android-SDK</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- production dependencies -->
        <dependency>
            <groupId>android</groupId>
            <artifactId>android</artifactId>
            <version>4.3.1_r3</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.looperj.android</groupId>
            <artifactId>android-async-http</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>android-repository</id>
            <url>file://${env.ANDROID_HOME}/extras/android/m2repository</url>
        </repository>
        <repository>
            <id>google-repository</id>
            <url>file://${env.ANDROID_HOME}/extras/google/m2repository</url>
        </repository>
    </repositories>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <version>1.3.2</version>
            </plugin>
            <plugin>
                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                <artifactId>android-maven-plugin</artifactId>
                <version>4.0.0-rc.1</version>
                <configuration>
                    <sdk>
                        <platform>18</platform>
                    </sdk>
                    <assetsDirectory>assets</assetsDirectory>
                    <resourceDirectory>res</resourceDirectory>
                    <androidManifestFile>AndroidManifest.xml</androidManifestFile>
                    <undeployBeforeDeploy>true</undeployBeforeDeploy>
                    <failOnNonStandardStructure>false</failOnNonStandardStructure>
                    <sign>
                        <debug>both</debug>
                    </sign>
                    <proguard>
                        <skip>false</skip>
                        <config>proguard-android.txt</config>
                    </proguard>
                </configuration>
                <extensions>true</extensions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <excludes>
                        <exclude>**/Test*.java</exclude>
                    </excludes>
                    <useFile>false</useFile>
                    <argLine>-Xmx1024m -XX:MaxPermSize=128M</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>